--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "csv-parse": "^5.6.0"
+    "@influxdata/influxdb3-client": "^1.1.0",
+    "csv-parse": "^5.6.0",
+    "dotenv": "^16.5.0"
   }
 }
