feat: implement throttled LP importer for InfluxDB 3.0 with batching and retry logic

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@influxdata/influxdb3-client": "^1.1.0"
+    "@influxdata/influxdb3-client": "^1.1.0",
+    "cli-progress": "^3.12.0"
   }
 }
