--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "type": "commonjs",
   "main": "influxdb3Connector.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@influxdata/influxdb3-client": "^1.1.0",
     "cli-progress": "^3.12.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
